--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 				<div class="elementor-element elementor-element-b300cf4 elementor-align-center elementor-widget elementor-widget-button" data-id="b300cf4" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="/cs">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://wa.me/6281380631890">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Chat Sekarang !</span>
 		</span>
